--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2045,17 +2045,17 @@ input, select, textarea {
 	}
 
 		.image:before {
-			-moz-transition: opacity 0.2s ease-in-out;
-			-webkit-transition: opacity 0.2s ease-in-out;
-			-ms-transition: opacity 0.2s ease-in-out;
-			transition: opacity 0.2s ease-in-out;
+			-moz-transition: opacity 0.s ease-in-out;
+			-webkit-transition: opacity 0.s ease-in-out;
+			-ms-transition: opacity 0.s ease-in-out;
+			transition: opacity 0.s ease-in-out;
 			background: url("images/overlay.png");
 			border-radius: 0.35em;
 			content: '';
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: 0;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -2066,10 +2066,10 @@ input, select, textarea {
 		}
 
 			.image.thumb:after {
-				-moz-transition: opacity 0.2s ease-in-out;
-				-webkit-transition: opacity 0.2s ease-in-out;
-				-ms-transition: opacity 0.2s ease-in-out;
-				transition: opacity 0.2s ease-in-out;
+				-moz-transition: opacity 0.s ease-in-out;
+				-webkit-transition: opacity 0.s ease-in-out;
+				-ms-transition: opacity 0.s ease-in-out;
+				transition: opacity 0.s ease-in-out;
 				border-radius: 0.35em;
 				border: solid 3px rgba(255, 255, 255, 0.5);
 				color: #fff;
@@ -2090,12 +2090,12 @@ input, select, textarea {
 			}
 
 			.image.thumb:hover:after {
-				opacity: 1.0;
+				opacity: 0;
 			}
 
 			.image.thumb:hover:before {
 				background: url("images/overlay.png"), url("images/overlay.png");
-				opacity: 1.0;
+				opacity: 0;
 			}
 
 		.image img {
